--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ stripe.api.secretKey=sk_test_51QIfBYCxm87CFLZbzw8snKfa3RED4vOaleMnAxnPmdcjApQcaq
 
 jwt.secret=javainuse
 
-allowedOrigin=http://localhost:5173/
+allowedOrigin=http://localhost:5173/,https://cyberquest.site,https://wonderful-bay-0f1cbb30f.4.azurestaticapps.net,https://4.204.1.55/
 allowedMethods=GET,POST,PUT,DELETE,OPTIONS
 allowedHeaders=Accept,Authorization,Content-Type
 allowedPathPattern=/**
